# opac-devops

./: .gitignore  .pre-commit-config.yaml  Dockerfile-anonymisation  README.md  bastion_connect.py  bastion_connect.sh  docker-compose.yaml  ecs_exec.py  mise.toml  pyproject.toml  stg_db.py  test_db.py  trigger_step_function.py
aws-utils/: README.md  bastion_connect.py
data-step-function/: Dockerfile-anonymisation  README.md  (+7 more)
images/stg-prod-restore/: Dockerfile-db-admin  Dockerfile-sanitizer  local_preflight.py  local_sanitize.py  pyproject.toml
images/stg-prod-restore/src/restore_tooling/: __init__.py  common.py  db.py  db_admin.py  sanitization_policy.yaml  sanitization_rules.py  sanitizer.py  sanitizer_execution.py  sanitizer_names.py  sanitizer_policy.py  sanitizer_schema.py  sanitizer_sql.py  sanitizer_verification.py  state.py
images/stg-prod-restore/src/restore_tooling/data/: first_names.txt  last_names.txt
images/stg-prod-restore/tests/: conftest.py  test_sanitizer_execution.py  test_sanitizer_names.py  test_sanitizer_policy.py  test_sanitizer_schema.py  test_sanitizer_sql.py  test_sanitizer_verification.py
images/test-db-drift/: Dockerfile-cleanup  Dockerfile-drifting  Dockerfile-rename-dance  README.md  local_drift.py  local_preflight.py  pyproject.toml
images/test-db-drift/src/: drift_policy.yaml  step-cleanup-on-failure.py  step-drifting.py  step-rename-dance.py
images/test-db-drift/src/utils/: aws.py  db.py  drift.py  drift_policy.py
images/test-db-drift/tests/: conftest.py  test_drift.py  test_drift_policy.py  test_drift_preflight.py
(+26 files in other folders)
