[project]
name = "opac-stg-prod-restore-images"
version = "0.1.0"
description = "Restore tooling images for staging production-derived database refresh"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.75",
    "psycopg2-binary>=2.9.11",
    "PyYAML>=6.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
